# YPLiOCR

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/engine/scan/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/labels/: labels.txt
app/src/main/cpp/: CMakeLists.txt  Native.cc  Native.h  det_process.cc  pipeline.cc  pipeline.h
app/src/main/java/com/engine/scan/: MainActivity.java
app/src/main/java/com/engine/scan/common/: AppCompatPreferenceActivity.java  AssetCopier.java  CameraSurfaceView.java  SDKExceptions.java  Utils.java
app/src/main/java/com/engine/scan/ppocr/: Native.java  OcrResultModel.java
app/src/main/java/com/engine/scan/yolo/: BoundingBox.java  Constants.java  Detector.java  OverlayView.java
app/src/main/res/drawable/: button_background.xml  image_border.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/engine/scan/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
